--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'albertSans', Arial, Helvetica, sans-serif;
 }
 
 .slider:focus {
@@ -28,6 +28,17 @@ body {
 .slider img {
   width: auto;
   height: auto;
+  max-width: 100%;
+  max-height: calc(100vh - 48px);
+}
+
+main {
+  height: 90vh;
+}
+
+#uploadArea {
+  width: 100%;
+  height: 100%;
   max-width: 100%;
   max-height: calc(100vh - 48px);
 }
