--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ body {
   box-shadow: 0px 0px 15px 5px #0000001e;
 }
 
-.slider img {
+#imageCanvas img {
   width: auto;
   height: auto;
   max-width: 100%;
@@ -41,4 +41,12 @@ main {
   height: 100%;
   max-width: 100%;
   max-height: calc(100vh - 48px);
+}
+
+.grayscale {
+  filter: grayscale(100%);
+}
+
+.high-contrast {
+  filter: contrast(140%);
 }
