--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: 'albertSans', Arial, Helvetica, sans-serif;
+  font-family: "albertSans", Arial, Helvetica, sans-serif;
 }
 
 .slider:focus {
