--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@ body {
   font-family: "albertSans", Arial, Helvetica, sans-serif;
 }
 
+.slider {
+  --divider-color: #ffffff80;
+}
+
 .slider:focus {
   outline: none;
   box-shadow: 0px 0px 15px 5px #0000001e;
@@ -14,6 +18,13 @@ body {
 #main {
   width: auto;
   height: calc(100vh - 48px);
+}
+
+#main .fullscreen,
+.fullscreen #imageCanvas img,
+.fullscreen #uploadArea {
+  height: 100vh !important;
+  max-height: 100vh !important;
 }
 
 #imageCanvas img {
